fix ff layout issue

--- a/src/components/calcite-color-hex-input/calcite-color-hex-input.scss
+++ b/src/components/calcite-color-hex-input/calcite-color-hex-input.scss
@@ -38,4 +38,5 @@ $input-side-offset: 18px;
   grid-column: 1 / 3;
 
   text-transform: uppercase;
+  width: 100%;
 }
